--- a/src/org/me/paneles/PanelRentaHabitacion.form
+++ b/src/org/me/paneles/PanelRentaHabitacion.form
@@ -29,14 +29,12 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Component id="jSeparator1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="jSeparator1" alignment="0" pref="504" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="jcFecha" min="-2" pref="286" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jSeparator2" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jlIdEmpleado" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jlApellidoPaterno" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="jlIngreso" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jlHorarioInicio" min="-2" max="-2" attributes="0"/>
@@ -46,11 +44,9 @@
                       <Component id="jsMinutos" min="-2" pref="48" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="113" pref="113" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jtfIdHabitacion" alignment="1" pref="391" max="32767" attributes="0"/>
-                          <Component id="jtfIdEmpleado" alignment="0" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="jlApellidoPaterno" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="jtfIdHabitacion" min="-2" pref="391" max="-2" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -63,17 +59,12 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jlIdEmpleado" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jtfIdEmpleado" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jlApellidoPaterno" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jtfIdHabitacion" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jlHorarioInicio" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -91,19 +82,12 @@
               <Component id="jSeparator2" min="-2" pref="10" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jbAceptar" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="17" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jlIdEmpleado">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="ID del empleado"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="jtfIdEmpleado">
-    </Component>
     <Component class="javax.swing.JLabel" name="jlApellidoPaterno">
       <Properties>
         <Property name="text" type="java.lang.String" value="ID de la habitaci&#xf3;n"/>
