--- a/src/org/me/paneles/PanelAltaEmpleado.form
+++ b/src/org/me/paneles/PanelAltaEmpleado.form
@@ -31,7 +31,6 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="jpContrasena" alignment="1" min="-2" pref="391" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
                               <Component id="jSeparator1" alignment="0" max="32767" attributes="0"/>
                               <Component id="jSeparator2" alignment="0" max="32767" attributes="0"/>
@@ -88,6 +87,14 @@
                                       <Component id="jtfDireccion" pref="391" max="32767" attributes="0"/>
                                       <Component id="jtfEmail" max="32767" attributes="0"/>
                                   </Group>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jcbTurno" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jpContrasena" min="-2" pref="391" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -164,7 +171,12 @@
                   <Component id="jlContrasena" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jpContrasena" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jcbTurno" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="jbAceptar" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -453,6 +465,18 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jtfEmail">
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Turno"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="jcbTurno">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="new javax.swing.DefaultComboBoxModel(new String[] { &quot;Matutino&quot;, &quot;Vespertino&quot;, &quot;Nocturno&quot;})" type="code"/>
+        </Property>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
